--- a/index.html
+++ b/index.html
@@ -421,13 +421,50 @@ along with exceptional service quality.</p>
 
         </div>
 
+          <form method="post" id="frmContactus">
+                    <div class="contact-form">
+                      <div class="form-group">
+                       <label class="control-label col-sm-2" for="name">Name:</label>
+                       <div class="col-sm-10">          
+                        <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
+                       </div>
+                      </div>
+                      <div class="form-group">
+                       <label class="control-label col-sm-2" for="email">Email:</label>
+                       <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+                       </div>
+                      </div>
+                      <div class="form-group">
+                       <label class="control-label col-sm-2" for="phone">phone:</label>
+                       <div class="col-sm-10">
+                        <input type="tel" class="form-control" placeholder="+91 xxxx-nnnnnn" id="phone" placeholder="Enter phone" name="phone" required>
+                       </div><!-- pattern="^[1-9]\d{9,9}$"-->
+                      </div>
+                      
+                      <div class="form-group">
+                       <label class="control-label col-sm-2" for="comments">Comments:</label>
+                       <div class="col-sm-10">
+                        <textarea class="form-control" rows="5" id="comments" name="comments"></textarea>
+                       </div>
+                      </div>
+                      <div class="form-group">
+                       <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn-primary" name="submit" id="submit">Submit</button>
+                      </br>
+                        <span style="color:red;" id="msg"></span>
+                       </div>
+                      </div>
+                     </div>
+                   </form>
+
       </div>
     </section><!-- End Contact Section -->
   <footer id="footer" class="footer">
       <div class="footer-legal">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Advait Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright v1 <strong><span>Advait Enterprise</span></strong>. All Rights Reserved
         </div>
 
       </div>
@@ -450,7 +487,28 @@ along with exceptional service quality.</p>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+<!--- email --->
 
+<script>
+  jQuery('#frmContactus').on('submit',function(e){
+  jQuery('#msg').html('');
+  jQuery('#submit').html('Please wait');
+  jQuery('#submit').attr('disabled',true);
+  jQuery.ajax({
+    url:'mail.php',
+    type:'post',
+    data:jQuery('#frmContactus').serialize(),
+    success:function(result){
+      jQuery('#msg').html(result);
+      jQuery('#submit').html('Submit');
+      jQuery('#submit').attr('disabled',false);
+      jQuery('#frmContactus')[0].reset();
+    }
+  });
+  e.preventDefault();
+  });
+  </script>
+  <!-- end of email ---->
 </body>
 
 </html>
