--- a/index.html
+++ b/index.html
@@ -424,33 +424,36 @@ along with exceptional service quality.</p>
           <form method="post" id="frmContactus">
                     <div class="contact-form">
                       <div class="form-group">
-                       <label class="control-label col-sm-2" for="name">Name:</label>
+                       <label class="control-label col-sm-2" for="name"><h5>Name</h5></label>
                        <div class="col-sm-10">          
                         <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
                        </div>
                       </div>
+                      <br>
                       <div class="form-group">
-                       <label class="control-label col-sm-2" for="email">Email:</label>
+                       <label class="control-label col-sm-2" for="email"><h5>Email</h5></label>
                        <div class="col-sm-10">
                         <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
                        </div>
                       </div>
+                      <br>
                       <div class="form-group">
-                       <label class="control-label col-sm-2" for="phone">phone:</label>
+                       <label class="control-label col-sm-2" for="phone"><h5>Phone</h5></label>
                        <div class="col-sm-10">
                         <input type="tel" class="form-control" placeholder="+91 xxxx-nnnnnn" id="phone" placeholder="Enter phone" name="phone" required>
                        </div><!-- pattern="^[1-9]\d{9,9}$"-->
                       </div>
-                      
+                      <br>
                       <div class="form-group">
-                       <label class="control-label col-sm-2" for="comments">Comments:</label>
+                       <label class="control-label col-sm-2" for="comments"><h5>Comments</h5></label>
                        <div class="col-sm-10">
-                        <textarea class="form-control" rows="5" id="comments" name="comments"></textarea>
+                        <textarea class="form-control" placeholder="Your comment" rows="5" id="comments" name="comments"></textarea>
                        </div>
                       </div>
+                      
                       <div class="form-group">
                        <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn-primary" name="submit" id="submit">Submit</button>
+                        <button type="submit" class="btn-primary form-submit-btn" name="submit" id="submit">Submit</button>
                       </br>
                         <span style="color:red;" id="msg"></span>
                        </div>
@@ -464,7 +467,7 @@ along with exceptional service quality.</p>
       <div class="footer-legal">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright v1 <strong><span>Advait Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Advait Enterprise</span></strong>. All Rights Reserved
         </div>
 
       </div>
@@ -490,10 +493,11 @@ along with exceptional service quality.</p>
 <!--- email --->
 
 <script>
+  console.log('test version 4');
   jQuery('#frmContactus').on('submit',function(e){
   jQuery('#msg').html('');
-  jQuery('#submit').html('Please wait');
-  jQuery('#submit').attr('disabled',true);
+  // jQuery('#submit').html('Please wait');
+  // jQuery('#submit').attr('disabled',true);
   jQuery.ajax({
     url:'mail.php',
     type:'post',
