--- a/index.html
+++ b/index.html
@@ -461,12 +461,12 @@ along with exceptional service quality.</p>
                      </div>
             </form>--> 
 
-            <form action="https://formsubmit.co/chandrushekar414@gmail.com" method="post"><!--https://formsubmit.co/el/zoloyi-->
-              <input type="text" id="name" placeholder="name">
-              <input type="email" id="email" placeholder="email">
-              <input type="text" id="phone" placeholder="email">
-              <input type="text" id="message" placeholder="name">
-              <button type="submit">send</button>
+            <form action="https://formsubmit.co/chandrushekar414@gmail.com" method="POST"><!--https://formsubmit.co/el/zoloyi-->
+              <input type="text" id="Name" placeholder="name">
+              <input type="email" id="Email" placeholder="email">
+              <input type="text" id="Phone" placeholder="email">
+              <input type="text" id="Message" placeholder="name">
+              <button type="submit">send v2</button>
             </form>
       </div>
     </section><!-- End Contact Section -->
