--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@ along with exceptional service quality.</p>
             </form>--> 
 
             <form action="https://formsubmit.co/chandrushekar414@gmail.com" method="POST"><!--https://formsubmit.co/el/zoloyi-->
-              <input type="text" id="Name" placeholder="name">
-              <input type="email" id="Email" placeholder="email">
-              <input type="text" id="Phone" placeholder="email">
-              <input type="text" id="Message" placeholder="name">
+              <input type="text" name="Name" placeholder="name">
+              <input type="email" name="Email" placeholder="email">
+              <input type="text" name="Phone" placeholder="email">
+              <input type="text" name="Message" placeholder="name">
               <button type="submit">send v2</button>
             </form>
       </div>
